onTOuch not working

--- a/HW2/app/src/main/res/values/strings.xml
+++ b/HW2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">HW2</string>
-    <string name="Start">Start</string>
+    <string name="start">Start</string>
     <string name="resume">Resume</string>
 </resources>
