--- a/HW2/app/src/main/res/values/strings.xml
+++ b/HW2/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">HW2</string>
     <string name="start">Start</string>
     <string name="resume">Resume</string>
+    <string name="player_1">Player 1</string>
+    <string name="player_2">player 2</string>
 </resources>
